--- a/zed/settings.json
+++ b/zed/settings.json
@@ -13,8 +13,8 @@
   // look
   "theme": {
     "mode": "dark",
-    "dark": "Andromeda",
-    "light": "Andromeda"
+    "dark": "Ayu Dark",
+    "light": "Ayu Dark"
   },
   "ui_font_size": 16,
   "buffer_font_size": 16,
